--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mon portfolio</title>
-  <link rel="stylesheet" href="prtfl.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="header">
